test/scc_test/expr/semantic-errors/081.a
081.t:4:8: error: invalid operands to binary '<'